[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/enemy_fighter_controller.gd" type="Script" id=1]
[ext_resource path="res://resources/runtime_data.tres" type="Resource" id=3]
[ext_resource path="res://Enemy/player_two_audio_controller.gd" type="Script" id=4]
[ext_resource path="res://Enemy/timers/enemy_type_timers.tscn" type="PackedScene" id=5]

[sub_resource type="AudioStreamRandomPitch" id=1]
random_pitch = 4.1

[node name="PlayerTwo" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 199.109, 0 )
script = ExtResource( 1 )
runtime_data = ExtResource( 3 )

[node name="AudioController" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="EnemyAttack" type="AudioStreamPlayer" parent="AudioController"]
stream = SubResource( 1 )
volume_db = -6.933

[node name="EnemyHurt" type="AudioStreamPlayer" parent="AudioController"]
stream = SubResource( 1 )

[node name="EnemyStart" type="AudioStreamPlayer" parent="AudioController"]

[node name="EnemySpriteAnims" type="AnimatedSprite" parent="."]

[node name="AttackAlarm" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemyContainer" type="Spatial" parent="."]

[node name="TextTimerController" parent="." instance=ExtResource( 5 )]
script = null

[connection signal="timeout" from="AttackAlarm" to="." method="_on_AttackAlarm_timeout"]
